--- a/Christudas_Ch06_Source/ch06/ch06-03/init/nginx/nginx.conf
+++ b/Christudas_Ch06_Source/ch06/ch06-03/init/nginx/nginx.conf
@@ -16,8 +16,8 @@ events {
 stream {
 
     upstream myapp2 {
-        server localhost:5672;
-        server localhost:5673;
+        server rabbit-mq-1:5672;
+        server rabbit-mq-2:5673;
     }    
 
 
